# harness

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PHASES.md  README.md  install.sh
.github/workflows/: ci.yml
crates/models-catalog/: Cargo.toml
crates/models-catalog/src/: lib.rs
docs/: 8-functions.md  SDK-BLOCKED.md  stream-events.md
fixtures/agent-sessions/: steering-mid-run.jsonl  tiny-text.jsonl  tool-batch-parallel.jsonl
fixtures/golden-events/: tiny-text.json  tool-batch-parallel.json
infographic/: index.html
scripts/: replay.sh
workers/auth-storage/: Cargo.toml
workers/auth-storage/src/: lib.rs
workers/context-compaction/: Cargo.toml
workers/context-compaction/src/: lib.rs
workers/document-extract/: Cargo.toml
workers/document-extract/src/: lib.rs
workers/fixtures-gen/: Cargo.toml
workers/fixtures-gen/src/: main.rs
workers/harness-cli/: Cargo.toml
workers/harness-cli/src/: main.rs
workers/harness-iii-bridge/: Cargo.toml
workers/harness-iii-bridge/src/: client.rs  hooks.rs  lib.rs  register.rs  runtime.rs  sandbox_tool.rs  sink.rs  testing.rs
workers/harness-runtime/: Cargo.toml
workers/harness-runtime/src/: hooks.rs  lib.rs  loop_state.rs  register.rs  runtime.rs  tools.rs
workers/harness-tui/: Cargo.toml
workers/harness-tui/src/: app.rs  bash.rs  clipboard.rs  fuzzy.rs  image.rs  input.rs  keybindings.rs  lib.rs  main.rs  markdown.rs  render.rs  sink.rs  slash.rs  slots.rs  theme.rs  watcher.rs
workers/harness-tui/tests/: render_snapshot.rs
workers/harness-tui/tests/snapshots/: render_snapshot__after_user_assistant_80x20.snap  render_snapshot__assistant_error_80x20.snap  render_snapshot__idle_screen_80x20.snap  render_snapshot__running_with_tool_call_80x22.snap  render_snapshot__tool_execution_end_80x22.snap  render_snapshot__wide_120x30.snap
workers/harnessd/: Cargo.toml
workers/harnessd/src/: main.rs
workers/hook-example/: Cargo.toml
workers/hook-example/src/: lib.rs  main.rs
workers/models-catalog/src/: lib.rs
workers/oauth-anthropic/: Cargo.toml
workers/oauth-anthropic/src/: lib.rs
workers/oauth-github-copilot/: Cargo.toml
workers/oauth-github-copilot/src/: lib.rs
workers/oauth-google-antigravity/: Cargo.toml
workers/oauth-google-antigravity/src/: lib.rs
workers/oauth-google-gemini-cli/: Cargo.toml
workers/oauth-google-gemini-cli/src/: lib.rs
workers/oauth-openai-codex/: Cargo.toml
workers/oauth-openai-codex/src/: lib.rs
workers/policy-subscribers/: Cargo.toml
workers/policy-subscribers/src/: lib.rs
workers/provider-anthropic/: Cargo.toml
workers/provider-anthropic/src/: lib.rs
workers/provider-azure-openai/: Cargo.toml
workers/provider-azure-openai/src/: lib.rs
workers/provider-base/: Cargo.toml
workers/provider-base/src/: iii_register.rs  lib.rs
workers/provider-bedrock/: Cargo.toml
workers/provider-bedrock/src/: lib.rs
workers/provider-cerebras/: Cargo.toml
workers/provider-cerebras/src/: lib.rs
workers/provider-deepseek/: Cargo.toml
workers/provider-deepseek/src/: lib.rs
workers/provider-faux/: Cargo.toml
workers/provider-faux/src/: lib.rs
workers/provider-fireworks/: Cargo.toml
workers/provider-fireworks/src/: lib.rs
workers/provider-google/: Cargo.toml
workers/provider-google-vertex/: Cargo.toml
workers/provider-google-vertex/src/: lib.rs
workers/provider-google/src/: lib.rs
workers/provider-groq/: Cargo.toml
workers/provider-groq/src/: lib.rs
workers/provider-huggingface/: Cargo.toml
workers/provider-huggingface/src/: lib.rs
workers/provider-kimi-coding/: Cargo.toml
workers/provider-kimi-coding/src/: lib.rs
workers/provider-minimax/: Cargo.toml
workers/provider-minimax/src/: lib.rs
workers/provider-mistral/: Cargo.toml
workers/provider-mistral/src/: lib.rs
workers/provider-openai/: Cargo.toml
workers/provider-openai-responses/: Cargo.toml
workers/provider-openai-responses/src/: lib.rs
workers/provider-openai/src/: lib.rs
workers/provider-opencode-go/: Cargo.toml
workers/provider-opencode-go/src/: lib.rs
workers/provider-opencode-zen/: Cargo.toml
workers/provider-opencode-zen/src/: lib.rs
workers/provider-openrouter/: Cargo.toml
workers/provider-openrouter/src/: lib.rs
workers/provider-vercel-ai-gateway/: Cargo.toml
workers/provider-vercel-ai-gateway/src/: lib.rs
workers/provider-xai/: Cargo.toml
workers/provider-xai/src/: lib.rs
workers/provider-zai/: Cargo.toml
workers/provider-zai/src/: lib.rs
workers/replay-test/: Cargo.toml
workers/replay-test/src/: main.rs
workers/replay-test/tests/: end_to_end.rs
workers/session-corpus/: Cargo.toml
workers/session-corpus/src/: lib.rs
workers/session-tree/: Cargo.toml
workers/session-tree/src/: lib.rs
