[workspace]
resolver = "2"
members = [
    "crates/harness-types",
    "crates/overflow-classify",
    "crates/models-catalog",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iii-experimental/harness"
authors = ["iii contributors"]

[workspace.dependencies]
iii-sdk = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
bytes = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
unreadable_literal = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
