[package]
name = "context-compaction"
description = "Async stream subscriber that watches AgentEvent token usage and triggers session compaction when the configured threshold is reached. Persists summaries via session-tree::compact."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
session-tree = { path = "../session-tree" }
models-catalog = { path = "../models-catalog" }
iii-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
