[package]
name = "hook-example"
description = "Live iii subscriber across the three hook topics (before_tool_call, after_tool_call, transform_context). Demonstrates how custom hooks register on the bus and observe agent events without modifying the loop."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
iii-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "hook_example"
path = "src/lib.rs"

[[bin]]
name = "hook-example"
path = "src/main.rs"
