[package]
name = "oauth-github-copilot"
description = "GitHub Copilot device-code OAuth flow (no callback server)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
auth-storage = { path = "../auth-storage" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
iii-sdk = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
