[package]
name = "provider-anthropic"
description = "Streaming client for the Anthropic Messages API. Implements the StreamProvider contract; emits AssistantMessageEvents in spec order; never throws — errors are encoded as final error events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
overflow-classify = { path = "../overflow-classify" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tokio-stream = "0.1"
