[package]
name = "provider-bedrock"
description = "Stub client for the AWS Bedrock Converse API. The full converse implementation depends on aws-sdk-bedrockruntime, which currently requires a newer rustc than the workspace toolchain. Until then this crate compiles a config surface and emits a final error event so callers can route around it."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
provider-base = { path = "../provider-base" }
iii-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
chrono = { workspace = true }
