[package]
name = "provider-google-vertex"
description = "Streaming client for Google Vertex AI Gemini. Same wire shape as provider-google; differs in URL (region + project + model + :streamGenerateContent) and auth (Authorization: Bearer <ADC token>)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
provider-base = { path = "../provider-base" }
iii-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
chrono = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
