[package]
name = "provider-groq"
description = "Streaming client for Groq via the OpenAI-compat Chat Completions wire shape. Thin config wrapper over provider-base::stream_chat_completions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
provider-base = { path = "../provider-base" }
iii-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio-stream = "0.1"
