[package]
name = "provider-minimax"
description = "MiniMax Chat Completions streaming via provider-base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
provider-base = { path = "../provider-base" }
iii-sdk = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
