[package]
name = "provider-openai"
description = "Streaming client for the OpenAI Chat Completions API. Thin config wrapper over provider-base; emits AssistantMessageEvents in spec order; never throws — errors are encoded as final error events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
provider-base = { path = "../provider-base" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
chrono = { workspace = true }
