[package]
name = "replay-test"
description = "Replay agent-session fixtures through harness-runtime against the faux provider; compare emitted AgentEvent stream against golden events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
harness-runtime = { path = "../harness-runtime" }
session-tree = { path = "../session-tree" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
iii-sdk = { workspace = true }
provider-faux = { path = "../provider-faux" }
harness-types = { path = "../harness-types" }
policy-subscribers = { path = "../policy-subscribers" }
hook-example = { path = "../hook-example" }
oauth-anthropic = { path = "../oauth-anthropic" }
chrono = { workspace = true }
serial_test = "3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "replay"
path = "src/main.rs"
